<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    app:cardCornerRadius="5dp">

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/decline"/>

    <TextView
        android:id="@+id/tv_youLoose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:text="@string/you_lose"
        android:textColor="@color/c2"
        android:textSize="35sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="@string/better_luck_next_time"
        android:textColor="@color/c3"
        android:textStyle="bold"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btn_retry"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:padding="4dp"
        android:text="@string/retry"
        android:textSize="20sp"
        android:background="@drawable/shape_button_rounded3"
        android:foreground="?attr/selectableItemBackground"
        android:textColor="@color/white" />

    </LinearLayout>

</androidx.cardview.widget.CardView>