<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_main_activity"
        android:layout_width="match_parent"
        android:background="@color/dull_blue"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/Color_Guess"
            android:textColor="@color/white"
            android:textSize="@dimen/toolbar_title_text_size"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/ll_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/toolbar_main_activity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/cv_input">

        <TextView
            android:id="@+id/iv_guess_color"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/color_guess_game"
            android:textColor="@color/black"
            android:textSize="50sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/iv_guess_color1"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/game"
            android:textColor="@color/black"
            android:textSize="50sp"
            android:gravity="center"/>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="22dp"
        app:cardElevation="10dp"
        android:layout_marginBottom="230dp"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_game"
        app:layout_constraintBottom_toBottomOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/card_view_layout_content_padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/please_enter_your_name"
            android:textColor="@color/secondary_text_color"
            android:textSize="22sp"
            android:textStyle="italic" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/very_light_blue"
            android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
            android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_Name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/name"

                android:focusableInTouchMode="true"
                android:textColor="@color/c4"
                android:textColorHighlight="@color/c4"
                android:background="@color/very_light_blue"
                android:textColorHint="@color/c3"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/et_text_size" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_Play"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/btn_marginStartEnd"
            android:layout_marginTop="@dimen/sign_up_screen_btn_marginTop"
            android:layout_marginEnd="@dimen/btn_marginStartEnd"
            android:background="@drawable/shape_button_rounded"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:paddingTop="@dimen/btn_paddingTopBottom"
            android:paddingBottom="@dimen/btn_paddingTopBottom"
            android:text="@string/play"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:textSize="@dimen/btn_text_size" />

    </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>